--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -1,5 +1,7 @@
 .footer {
     padding-bottom: 20px;
+    margin-top: -130px;
+
     &__top-wrapper {
         display: flex;
         justify-content: space-between;
